# haskell-python

./: .gitmodules  LICENSE  README.md  haskell-python.cabal  stack.yaml
app/: Embed.c  Embed.hs  EmbedStatics.h  Main.hs
app/plugins/: printer.py
embeded_poc/: embeded.c
lib/: Emitter.hs  Plugin.hs
prelude/: Prelude.hs
