name:                haskell-python
version:             0.1.0.0
synopsis:            PoC about python plugin framework with haskell core
description:         Please see README.md
homepage:            http://github.com/zsedem/haskell-python#readme
license:             MIT
license-file:        LICENSE
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           Copyright: (c) 2016 Zsigmond Ádám Olivér
category:            Library
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib, prelude
  default-extensions:  GeneralizedNewtypeDeriving
                     , OverloadedStrings
  exposed-modules:     Plugin
                     , Emitter
  other-modules:       Prelude
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , basic-prelude >= 0.5
                     , cpython >= 3.4
                     , text >= 1.0
  default-language:    Haskell2010

executable haskell-python-example
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:  GeneralizedNewtypeDeriving
                     , OverloadedStrings
  build-depends:       base
                     , haskell-python
                     , cmdargs
                     , mtl
                     , basic-prelude
                     , cpython
                     , text
  default-language:    Haskell2010

test-suite haskell-python-test
  type:                exitcode-stdio-1.0
  default-extensions:  GeneralizedNewtypeDeriving
                     , OverloadedStrings
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , haskell-python
  other-modules:       AllSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zsedem/haskell-python
